# RSI_bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: discord_bot.py  main.py  trading_utils.py
